<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<TextView android:id="@+id/setName"
    	android:text="@string/setName"
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:layout_marginTop="10dp"
    	android:layout_gravity="center_horizontal"
    	android:textSize="10pt"/>
	<RadioGroup android:id="@+id/radioGroup" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp">
    	<RadioButton android:id="@+id/unlockLogin" 
    	    android:text="@string/unlockLogin" 
    	    android:layout_width="wrap_content" 
    	    android:layout_height="wrap_content" >
    	</RadioButton>
    	<RadioButton android:id="@+id/unlockUser" 
    	    android:text="@string/unlockUser" 
    	    android:layout_width="wrap_content" 
    	    android:layout_height="wrap_content" >
    	</RadioButton>
    	<RadioButton android:id="@+id/unlockSheet" 
    	    android:text="@string/unlockSheet" 
    	    android:layout_width="wrap_content" 
    	    android:layout_height="wrap_content"
    	    android:visibility="gone"
    	     >
    	</RadioButton>
    	<RadioButton android:id="@+id/unlock_screw" 
    	    android:text="@string/unlock_screw" 
    	    android:layout_width="wrap_content" 
    	    android:layout_height="wrap_content" 
    	    android:visibility="gone"
    	    >
    	</RadioButton>    	
    	<RadioButton android:id="@+id/readLockNumber" 
    	    android:text="@string/readLockNumber" 
    	    android:layout_width="wrap_content" 
    	    android:layout_height="wrap_content" 
    	     android:visibility="gone"
    	    >
    	</RadioButton>
    	<RadioButton android:id="@+id/unlockOriginal"
    	    android:text="@string/unlockOriginal" 
    	    android:layout_width="wrap_content" 
    	    android:layout_height="wrap_content" >
    	</RadioButton>
    	<RadioButton android:id="@+id/unlockTwo"
    	    android:text="@string/unlockTwo" 
    	    android:layout_width="wrap_content" 
    	    android:layout_height="wrap_content" >
    	</RadioButton>    
    	<RadioButton android:id="@+id/unlockThree"
    	    android:text="@string/unlockThree" 
    	    android:layout_width="wrap_content" 
    	    android:layout_height="wrap_content">
    	</RadioButton>  
    	<RadioButton android:id="@+id/unlockFour"
    	    android:text="@string/unlockFour" 
    	    android:layout_width="wrap_content" 
    	    android:layout_height="wrap_content" >
    	</RadioButton>      	    		
    	<RadioButton android:id="@+id/unlockContinue"
    	    android:text="@string/unlockContinue" 
    	    android:layout_width="wrap_content" 
    	    android:layout_height="wrap_content" 
    	    android:visibility="gone"
    	    >
    	</RadioButton>      	    		
	</RadioGroup>
	<TextView android:id="@+id/TextView0"
    	android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp" />
       
	
	
	
</LinearLayout>
