<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollView"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	<TextView android:text="@string/setParameter"
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_horizontal"
    	android:layout_marginTop="10dp"
    	android:textSize="10pt"/>
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/bluetoothName"
		    android:text="@string/bluetoothName"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
			android:textSize="10pt" />
		<TextView android:id="@+id/bluetoothNameValue"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="8pt"/>
	</LinearLayout>
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/international_mobile_equipment_identity"
		    android:text="@string/IMEI"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
			android:textSize="10pt" />
		<TextView android:id="@+id/IMEI_value"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="8pt"/>
	</LinearLayout>			
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/S00SerialNumber"
		    android:text="@string/S00SerialNumber"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
			android:textSize="10pt" />
		<TextView android:id="@+id/S00SerialNumberValue"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:clickable="true"
			android:textSize="8pt"/> 
	</LinearLayout>
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/S00SoftwareVersion"
		    android:text="@string/S00SoftwareVersion"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
			android:textSize="10pt" />						
		<TextView android:id="@+id/S00SoftwareVersionValue"
		   	android:layout_width="wrap_content" 
		   	android:layout_height="wrap_content"
			android:textSize="8pt" />
	</LinearLayout>	
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/S00HardwareVersion"
		    android:text="@string/S00HardwareVersion"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
			android:textSize="10pt" />						
		<TextView android:id="@+id/S00HardwareVersionValue"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
			android:textSize="8pt"/>
	</LinearLayout>		
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/offset"
			android:text="@string/offset"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="10pt"/>
		<Spinner android:id="@+id/spinner"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>		
		<EditText android:id="@+id/offsetValue"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="8pt"
			android:inputType="number" />                  
	</LinearLayout>	                  
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/set"
			android:text="@string/set_value"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="10pt" />
		<EditText android:id="@+id/setValue"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="8pt"
			android:inputType="number"/>                  
	</LinearLayout>
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/set_unlock_type"
		   	android:text="@string/set_unlock_type" 
		   	android:layout_width="wrap_content" 
		   	android:layout_height="wrap_content"
		   	android:visibility="gone"
			android:textSize="10pt" />
		<Spinner android:id="@+id/spinner_unlock_type"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:visibility="gone"
		    />		  		               
	</LinearLayout>				
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/serviceURL"
			android:text="@string/serviceURL"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="10pt" />
		<TextView android:id="@+id/serviceURLValue"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="8pt" />  		               
	</LinearLayout>
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/APN"
		    android:text="@string/APN"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
			android:textSize="10pt" />						
		<TextView android:id="@+id/APN_value"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
	    	android:clickable="true"
			android:textSize="8pt"/>
	</LinearLayout>	
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/downloadUpdate"
		   	android:text="@string/downloadUpdate" 
		   	android:layout_width="wrap_content" 
		   	android:layout_height="wrap_content"
			android:textSize="10pt" />
		<Spinner android:id="@+id/spinner_download"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>		  		               
	</LinearLayout>
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/effective_days"
		   	android:text="@string/effective_days" 
		   	android:layout_width="wrap_content" 
		   	android:layout_height="wrap_content"
		   	android:visibility="gone"
			android:textSize="10pt" />
		<Spinner android:id="@+id/spinner_effective_days"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:visibility="gone"
		    />
		<TextView android:text="@string/effective_days_unit" 
		   	android:layout_width="wrap_content" 
		   	android:layout_height="wrap_content"
		   	 android:visibility="gone"
			android:textSize="8pt" />		  		               
	</LinearLayout>
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/userName"
		    android:text="@string/userName"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
			android:textSize="10pt" />
		<TextView android:id="@+id/user_name_value"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="8pt"/>
	</LinearLayout>
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/user_download"
		    android:text="@string/user_download"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
			android:textSize="10pt" />
		<TextView android:id="@+id/user_download_value"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="8pt"/> 
	</LinearLayout>
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/unload"
		    android:text="@string/unload"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
			android:textSize="10pt" />						
		<TextView android:id="@+id/unload_value"
		   	android:layout_width="wrap_content" 
		   	android:layout_height="wrap_content"
			android:textSize="8pt" />
	</LinearLayout>	
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/APP_version"
			android:text="@string/APP_version"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="10pt" />
		<TextView android:id="@+id/APP_version_value"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="8pt" />  		               
	</LinearLayout>		
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/date"
			android:text="@string/date"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="10pt" />
		<TextView android:id="@+id/date_value"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="8pt" />  		               
	</LinearLayout>		
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/time"
			android:text="@string/time"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="10pt" />
		<TextView android:id="@+id/time_value"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="8pt" />  		
	</LinearLayout>	 				
<!-- 	<TextView android:id="@+id/APPName" -->
<!--     	android:text="@string/app_name_set"  -->
<!--     	android:layout_marginLeft="10dp" -->
<!--     	android:layout_width="wrap_content"  -->
<!--     	android:layout_height="wrap_content" -->
<!-- 		android:textSize="8pt" />  		                -->
<!-- 	<TextView android:id="@+id/backgroundPicture" -->
<!--     	android:text="@string/backgroundPicture"  -->
<!--     	android:layout_marginLeft="10dp" -->
<!--     	android:layout_width="wrap_content"  -->
<!--     	android:layout_height="wrap_content" -->
<!-- 		android:textSize="8pt" />  		                -->
<!-- 	<TextView android:id="@+id/iconPicture" -->
<!--     	android:text="@string/iconPicture"  -->
<!--     	android:layout_marginLeft="10dp" -->
<!--     	android:layout_width="wrap_content"  -->
<!--     	android:layout_height="wrap_content" -->
<!-- 		android:textSize="8pt" />  		                -->
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		<TextView android:id="@+id/textViewBaudRate"
			android:text="@string/baudRate"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:visibility="gone"
			android:textSize="10pt" />
		<TextView android:id="@+id/baudRateValue"
	    	android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:visibility="gone"
			android:textSize="9pt" />  		               
	</LinearLayout>		
	<TextView android:id="@+id/TextView0"
    	android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"/>
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<Button android:id="@+id/save"  
		    android:text="@string/save"  
			android:layout_width="wrap_content"  
		    android:layout_height="wrap_content" 
		    android:layout_marginLeft="50dp" 
		    android:textColor="#000000"  
		    android:textSize="18sp"/>	
        <Space android:layout_height="wrap_content"
            android:layout_width="50dp"/>		    
		<Button android:id="@+id/cancel"
		    android:text="@string/cancel"  
			android:layout_width="wrap_content"    
		    android:layout_height="wrap_content"  
		    android:textColor="#000000"  
		    android:textSize="18sp"/>       
	</LinearLayout>       
</LinearLayout>    
</ScrollView>        

